converted to markdown

--- a/u3.md
+++ b/u3.md
@@ -1,3 +1,4 @@
+# U3
 - Warschauer Straße
 - Schlesisches Tor
 - Görlitzer Bahnhof
@@ -9,8 +10,7 @@
 - Kurfürstenstraße
 - Nollendorfplatz
 - Wittenbergplatz
-- Augsburger Straße
-- (Nürnberger Platz)
+- Augsburger Straße - (Nürnberger Platz)
 - Spichernstraße
 - Hohenzollernplatz
 - Fehrbelliner Platz
